<resources>
<!--    <string name="app_name">echo-proto</string>-->
    <string name="app_name">echo?</string>


    <!--  bottom menu items  -->
    <string name="menu_bottom_queue">Очередь</string>
    <string name="menu_bottom_queue_description">Episodes query</string>
    <string name="menu_bottom_feed">Лента</string>
    <string name="menu_bottom_feed_description">Personal managed feed</string>
    <string name="menu_bottom_play">Play</string>
    <string name="menu_bottom_play_description">Play/Pause button</string>
    <string name="menu_bottom_full_tab_feed">Каналы</string>
    <string name="menu_bottom_full_tab_feed_description">Episodes feed separated by channel name</string>
    <string name="menu_bottom_downloads">Загрузки</string>
    <string name="menu_bottom_downloads_description">Downloads with log page</string>

    <string name="notification_channel_name">Echo Podcast Player Channel</string>
    <string name="notification_channel_description">Shows the currently playing podcast</string>

    <!--  dialog fragment text-->
    <string name="youtube_open_error">Не удается открыть видео в YouTube</string>
    <string name="youtube_open_title">Открыть оригинальное видео в YouTube?</string>
    <string name="youtube_open_positive">Открыть</string>
    <string name="feed_filter_title">Фильтры поиска по ключевым словам для ленты:</string>
    <string name="feed_filter_edit">Редактировать</string>
    <string name="feed_filter_edit_done">Готово</string>
    <string name="feed_filter_confirm">Подтвердить</string>
    <string name="feed_filter_cancel">Отмена</string>
    <string name="feed_filter_hint">Добавьте новый фильтр</string>
    <string name="feed_filter_add">Добавить</string>

    <!--  bottom sheet speed fragment  -->
    <string name="feed_filter_add_confirm">Подтвердить</string>
    <string name="feed_filter_add_cancel">Отмена</string>
    <string name="feed_filter_add_hint">Добавьте текст фильтра</string>
    <string name="feed_filter_empty">Фильтров пока нет</string>
    <string name="speed_control_title">Скорость воспроизведения:</string>
    <string name="speed_control_presets_label">Сохранённые скорости</string>
    <string name="speed_control_drag_handle_content_description">Перетащите, чтобы настроить высоту панели</string>
    <string name="speed_control_preset_saved">Скорость добавлена в список</string>
    <string name="speed_control_preset_exists">Такая скорость уже сохранена</string>
    <string name="speed_control_preset_removed">Скорость удалена</string>

    <!-- Episode Detail V2 -->
    <string name="episode_detail_title">Description</string>
    <string name="queue_button">QUEUE</string>
    <string name="play_button">PLAY</string>
    <string name="download_button">DOWNLOAD</string>
    <string name="show_notes_label">Show Notes</string>
    <string name="chapter_markers_label">Chapter Markers</string>

    <string name="queue_summary_template">В очереди %1$d эпизодов. Время воспроизведения: %2$s</string>

</resources>