<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/queueFragment"
        android:title="@string/menu_bottom_queue"
        android:contentDescription="@string/menu_bottom_queue_description"
        android:icon="@drawable/ic_menu_queue"/>
    <item android:id="@+id/hostFeedPager"
        android:title="@string/menu_bottom_feed"
        android:contentDescription="@string/menu_bottom_feed_description"
        android:icon="@drawable/ic_menu_feed" />
    <item android:id="@+id/hostChannelsPager"
        android:title="@string/menu_bottom_full_tab_feed"
        android:contentDescription="@string/menu_bottom_full_tab_feed_description"
        android:icon="@drawable/ic_menu_full_tab_feed" />
    <item android:id="@+id/downloadsFragment"
        android:title="@string/menu_bottom_downloads"
        android:contentDescription="@string/menu_bottom_downloads_description"
        android:icon="@drawable/ic_menu_downloads"/>
</menu>